# rosbot_launch

./: CMakeLists.txt  all.launch  explore.launch  package.xml
config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: rosbot.launch  rosbot_explore.launch  rosbot_gmapping.launch  rosbot_move_base.launch
